Version 0.3
===========

07.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added drag and drop functionality for categories select
  * Fixed bug when there is no subscription draggable box was empty
  * Added clear both after every second category tweets/members display in welcome page
  * Redirect to welcome page when user is not logged in and tries to access protected page

27.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added /login, /logout, /settings, /deactivate /username routes
  * Changed layout (user div box is top-right)
  * Moved all user settings into one place /settings
  * Bugfix: localization of pagination links
  * Bugfix: localization of time_ago_in_words
  * Bugfix: display only active users
  * Bugfix: redirect to settings url when user logins but haven't selected any categories previously

26.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented category to list functionality (every user can create a list on his twitter account from users in category at 140.mk site)
  * Added one more step for deactivating account

  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfix: Tabs now work for categories with spaces in the title


Version 0.2
===========

24.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Fixed category URL to not remove latic characters also

07.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Renamed field twitter_account_created to twitter_account_created_at in users table
  * Renamed field is_active to status in users table (status = 1 => active, status = 0 => not active, status = 2 => protected)
  * Added notification when user has protected his account, he has to follow 140mk user or make his account public in order to collect his tweets
  * Removed old rake tasks
  * Added rake task (rake twitter:get_users) for collecting users that are followed by 140mk twitter account (useful in development mode)