@@ -6,9 +6,10 @@ Version 0.3
 
   Dalibor Nasevic <dalibor.nasevic@gmail.com>
   * Added drag and drop functionality for categories select
-  * Fixed bug when there is no subscription draggable box was empty
+  * Bugfix: Draggable box is empty when there is no subscription
   * Added clear both after every second category tweets/members display in welcome page
   * Redirect to welcome page when user is not logged in and tries to access protected page
+  * Refactoring: Changed singleton TWITTER_HTTP_ACCESS class into TwitterAccess module
 
 27.01.2010
 ==========
